<resources>
    <string name="app_name">Wifi QR Code Password Scanner</string>
    <string name="let_s_start">Let\'s Start</string>

    <string name="splash_text_desc">Go and enjoy our features for Wi-FI QR Password Scanner and make your life easy with us.</string>
    <string name="get_started">Get Started</string>
    <string name="share_content">Let me Suggest you this App</string>
    <string name="no_share">No Sharing App Found</string>
    <string name="more_apps_link">More Apps Link</string>
    <string name="flash">FlashLight</string>
    <string name="restart">Restart</string>
    <string name="textqrscan">Align QR within Frame</string>
    <string name="positiontext">""</string>
    <string name="copy_password">Copy Password</string>
    <string name="connect_to_wifi">Connect to Wifi</string>
    <string name="paste_password_to_scanned_wifi">Paste Password to Desired Network</string>
    <string name="wifi_qr_s">Wifi QR</string>
    <string name="enter_ssid">Enter SSID</string>
    <string name="enter_password">Enter Password</string>
    <string name="generate_wi_fi_qr_code">Create Wifi QR</string>
    <string name="create_wifi_qr">Wifi QR</string>
    <string name="url">URL</string>
    <string name="share">Share</string>
    <string name="phone">Phone</string>
    <string name="create">Create</string>
    <string name="phone_no">Phone No</string>
    <string name="contact_qr">Contact QR</string>
    <string name="other_contact_can">Other Contact can Get Your Number by Scanning this QR</string>
    <string name="enter_text">Enter text Here</string>
    <string name="text_qr">Text QR</string>
    <string name="share_qr">Share QR</string>
    <string name="qr_code">QR Code</string>
    <string name="com">Com</string>
    <string name="www">Www</string>
    <string name="enter_url">Enter URL here</string>
    <string name="enter_email">Enter Email Here</string>
    <string name="email">Email</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="enter_whatsapp_number">Enter Whatsapp Number</string>
    <string name="create_qr">Create QR</string>
    <string name="whatsapp_qr">Whatsapp QR</string>
    <string name="instagram">Instagram</string>
    <string name="instagram_qr">Instagram QR</string>
    <string name="enter_instagram_username">Enter Instagram Username</string>
    <string name="twitter">Twitter</string>
    <string name="twitter_qr">Twitter QR</string>
    <string name="enter_twitter_username">Enter Twitter Username</string>
    <string name="enter_instagram_url">Enter Instagram URL</string>
    <string name="enter_twitter_url">Enter Twitter URL</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="history_fragment">History Fragment</string>
    <string name="generate">Generate</string>
    <string name="settingss">Settings</string>
    <string name="generatee">Generate</string>
    <string name="settingsss">Settings</string>
    <string name="vibrate">Vibrate</string>
    <string name="vibration_when_scan_is_done">Vibration when scan is done.</string>
    <string name="beep">Beep</string>
    <string name="beep_when_scan_is_done">Beep when scan is done.</string>
    <string name="support">Support</string>
    <string name="rate_us">Rate Us</string>
    <string name="your_best_reward_to_us">Your best reward to us.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="follow_our_policies_that_benefits_you">Follow our policies that benefits you.</string>
    <string name="share2">Share</string>
    <string name="share_app_with_others">Share app with others.</string>
    <string name="twitterx_qr">TwitterX QR</string>
    <string name="twitter_x">Twitter X</string>
    <string name="enter_twitterx_url">Enter TwitterX URL</string>
    <string name="exit">Exit</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="submit">Submit</string>
    <string name="rate_us1">Rate Us</string>
    <string name="how_would_you_love_this_app">How would you love this app?</string>
    <string name="web">w</string>
    <string name="exit_app">Exit App</string>
    <string name="exits_the_app">Exits the App</string>
    <string-array name="auth_types">
        <item>WPA</item>
        <item>WEP</item>
        <item>None</item>
    </string-array>
</resources>