<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:padding="@dimen/_16sdp">

    <TextView
        android:id="@+id/tvExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:textColor="@color/white"
        android:fontFamily="@font/itim_regular"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"/>

    <TextView
        android:id="@+id/tvExitMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_you_want_to_exit"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/proxima_regular"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/tvExit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnYes"/>

    <Button
        android:id="@+id/btnYes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFC107"
        android:text="@string/yes"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@id/btnNo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvExitMessage"
        app:layout_constraintWidth_percent="0.5"
        android:minHeight="@dimen/_48sdp" />

    <Button
        android:id="@+id/btnNo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yellow"
        android:text="@string/no"
        android:layout_marginStart="@dimen/_10sdp"
        android:textColor="@color/black_light"
        app:layout_constraintStart_toEndOf="@id/btnYes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvExitMessage"
        app:layout_constraintWidth_percent="0.5"
        android:minHeight="@dimen/_48sdp" />
</androidx.constraintlayout.widget.ConstraintLayout>
