<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_light">

    <ImageView
        android:id="@+id/imgBackExit"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:src="@drawable/back_ic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_7sdp"
        android:fontFamily="@font/itim_regular"
        android:text="@string/twitter_x"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintBottom_toBottomOf="@+id/imgBackExit"
        app:layout_constraintStart_toEndOf="@+id/imgBackExit"
        app:layout_constraintTop_toTopOf="@+id/imgBackExit" />

    <TextView
        android:id="@+id/txt6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/twitterx_qr"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgBackExit"
        tools:ignore="TextSizeCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_7sdp"
        android:layout_marginEnd="@dimen/_7sdp"
        android:background="@drawable/button_bg"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_15sdp"
        android:padding="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt6">

        <ImageView
            android:id="@+id/TwitterVector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icons8_twitterx_75___"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/twitterEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:backgroundTint="@color/black_light"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/itim_regular"
            android:hint="@string/enter_twitterx_url"
            android:layout_marginStart="@dimen/_7sdp"
            android:layout_marginEnd="@dimen/_7sdp"
            android:inputType="text"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TwitterVector" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/generateTwitterQRButton"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/button_bg"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/itim_regular"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:text="@string/create_qr"
        android:textAllCaps="false"
        android:textColor="@color/black_light"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout5"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
